--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+
+
+AUTH_SECRET="axUVEn3Od81jfELlvrZHt0vnwm5dfjCNdmp/OxZe5Vg="
